ajout d'un mapping + remplacment culture par produit
