# src/routes/stats.routes.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const statsController = require("../controllers/stats.controller");
 const geoController = require('../controllers/geo.controller');
 
-router.get("/regions/cultures/:culture/years/:year", statsController.getStatsByRegion);
+router.get("/regions/products/:culture/years/:year", statsController.getStatsByRegion);
 router.get("/products/:id/summary", statsController.getProductSummary);
 router.get("/", statsController.getAgriculturalStats);
 router.get('/regions', geoController.getRegionStatsGeoJSON);
